tests/snapshots/run_wpt_conformance__litert_cast_int8_4D_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast int8 4D tensor to int32",
    "litert",
    "PASS",
)
